--- a/apps/ios/SimpleX Localizations/it.xcloc/Localized Contents/it.xliff
+++ b/apps/ios/SimpleX Localizations/it.xcloc/Localized Contents/it.xliff
@@ -3310,9 +3310,9 @@ chat item action</note>
         <target>Errore di connessione al server di inoltro %@. Riprova più tardi.</target>
         <note>alert message</note>
       </trans-unit>
-      <trans-unit id="Error connecting to the server used to receive messages from this connection: %@" xml:space="preserve" approved="no">
+      <trans-unit id="Error connecting to the server used to receive messages from this connection: %@" xml:space="preserve">
         <source>Error connecting to the server used to receive messages from this connection: %@</source>
-        <target state="translated">Errore di connessione al server usato per ricevere messaggi da questa connessione: %@</target>
+        <target>Errore di connessione al server usato per ricevere messaggi da questa connessione: %@</target>
         <note>subscription status explanation</note>
       </trans-unit>
       <trans-unit id="Error creating address" xml:space="preserve">
@@ -8476,9 +8476,9 @@ Ti verrà chiesto di completare l'autenticazione prima di attivare questa funzio
         <target>Sessioni di trasporto</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
-      <trans-unit id="Trying to connect to the server used to receive messages from this connection." xml:space="preserve" approved="no">
+      <trans-unit id="Trying to connect to the server used to receive messages from this connection." xml:space="preserve">
         <source>Trying to connect to the server used to receive messages from this connection.</source>
-        <target state="translated">Tentativo di connessione al server usato per ricevere messaggi da questa connessione.</target>
+        <target>Tentativo di connessione al server usato per ricevere messaggi da questa connessione.</target>
         <note>subscription status explanation</note>
       </trans-unit>
       <trans-unit id="Turkish interface" xml:space="preserve">
@@ -9190,9 +9190,9 @@ Repeat join request?</source>
 Ripetere la richiesta di ingresso?</target>
         <note>new chat sheet title</note>
       </trans-unit>
-      <trans-unit id="You are connected to the server used to receive messages from this connection." xml:space="preserve" approved="no">
+      <trans-unit id="You are connected to the server used to receive messages from this connection." xml:space="preserve">
         <source>You are connected to the server used to receive messages from this connection.</source>
-        <target state="translated">Sei connesso/a al server usato per ricevere messaggi da questa connessione.</target>
+        <target>Sei connesso/a al server usato per ricevere messaggi da questa connessione.</target>
         <note>subscription status explanation</note>
       </trans-unit>
       <trans-unit id="You are invited to group" xml:space="preserve">
@@ -9200,9 +9200,9 @@ Ripetere la richiesta di ingresso?</target>
         <target>Sei stato/a invitato/a al gruppo</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
-      <trans-unit id="You are not connected to the server used to receive messages from this connection (no subscription)." xml:space="preserve" approved="no">
+      <trans-unit id="You are not connected to the server used to receive messages from this connection (no subscription)." xml:space="preserve">
         <source>You are not connected to the server used to receive messages from this connection (no subscription).</source>
-        <target state="translated">Non sei connesso/a al server usato per ricevere messaggi da questa connessione (nessuna iscrizione).</target>
+        <target>Non sei connesso/a al server usato per ricevere messaggi da questa connessione (nessuna iscrizione).</target>
         <note>subscription status explanation</note>
       </trans-unit>
       <trans-unit id="You are not connected to these servers. Private routing is used to deliver messages to them." xml:space="preserve">
@@ -10264,9 +10264,9 @@ pref value</note>
         <target>nessuna crittografia e2e</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
-      <trans-unit id="no subscription" xml:space="preserve" approved="no">
+      <trans-unit id="no subscription" xml:space="preserve">
         <source>no subscription</source>
-        <target state="translated">nessuna iscrizione</target>
+        <target>nessuna iscrizione</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="no text" xml:space="preserve">
